feat: implement search and list API — filters, pagination, full invoice detail