@@ -1,21 +1,35 @@
 package com.zamp.invoice.service;
 
+import com.zamp.invoice.domain.ExtractionEvidence;
 import com.zamp.invoice.domain.Invoice;
 import com.zamp.invoice.domain.InvoiceLineItem;
 import com.zamp.invoice.domain.InvoiceStatus;
+import com.zamp.invoice.domain.ValidationFailure;
 import com.zamp.invoice.dto.InvoiceDetailResponse;
+import com.zamp.invoice.dto.InvoiceListItem;
 import com.zamp.invoice.dto.InvoiceListResponse;
 import com.zamp.invoice.dto.LineItemDto;
+import com.zamp.invoice.dto.ValidationFailureDto;
 import com.zamp.invoice.exception.InvoiceNotFoundException;
+import com.zamp.invoice.repository.ExtractionEvidenceRepository;
 import com.zamp.invoice.repository.InvoiceLineItemRepository;
 import com.zamp.invoice.repository.InvoiceRepository;
+import com.zamp.invoice.repository.InvoiceSpecification;
+import com.zamp.invoice.repository.ValidationFailureRepository;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Sort;
+import org.springframework.data.jpa.domain.Specification;
 import org.springframework.stereotype.Service;
 import org.springframework.web.multipart.MultipartFile;
 
 import java.io.IOException;
 import java.io.UncheckedIOException;
+import java.math.BigDecimal;
+import java.time.LocalDate;
 import java.time.OffsetDateTime;
 import java.util.List;
+import java.util.Map;
 import java.util.UUID;
 import java.util.stream.Collectors;
 
@@ -24,10 +38,17 @@ public class InvoiceService {
 
     private final InvoiceRepository invoiceRepository;
     private final InvoiceLineItemRepository invoiceLineItemRepository;
+    private final ValidationFailureRepository validationFailureRepository;
+    private final ExtractionEvidenceRepository extractionEvidenceRepository;
 
-    public InvoiceService(InvoiceRepository invoiceRepository, InvoiceLineItemRepository invoiceLineItemRepository) {
+    public InvoiceService(InvoiceRepository invoiceRepository,
+                           InvoiceLineItemRepository invoiceLineItemRepository,
+                           ValidationFailureRepository validationFailureRepository,
+                           ExtractionEvidenceRepository extractionEvidenceRepository) {
         this.invoiceRepository = invoiceRepository;
         this.invoiceLineItemRepository = invoiceLineItemRepository;
+        this.validationFailureRepository = validationFailureRepository;
+        this.extractionEvidenceRepository = extractionEvidenceRepository;
     }
 
     public Invoice createInvoice(MultipartFile file) {
@@ -55,14 +76,24 @@ public class InvoiceService {
 
         List<LineItemDto> lineItems = invoiceLineItemRepository.findByInvoiceId(invoiceId).stream()
                 .map(this::toLineItemDto)
-                .collect(Collectors.toList());
+                .toList();
+
+        List<ValidationFailure> allFailures = validationFailureRepository.findByInvoiceId(invoiceId);
+        List<ValidationFailureDto> unresolvedFailures = allFailures.stream()
+                .filter(failure -> !failure.isResolved())
+                .map(ValidationFailureDto::from)
+                .toList();
+        List<ValidationFailureDto> resolvedFailures = allFailures.stream()
+                .filter(ValidationFailure::isResolved)
+                .map(ValidationFailureDto::from)
+                .toList();
+
+        Map<String, Double> evidenceSummary = extractionEvidenceRepository.findByInvoiceIdAndLineItemIdIsNull(invoiceId).stream()
+                .filter(evidence -> evidence.getOcrConfidence() != null)
+                .collect(Collectors.toMap(evidence -> evidence.getFieldName().name(), evidence -> evidence.getOcrConfidence().doubleValue()));
 
         return InvoiceDetailResponse.builder()
                 .id(invoice.getId())
-                .status(invoice.getStatus())
-                .extractionMethod(invoice.getExtractionMethod())
-                .originalFilename(invoice.getOriginalFilename())
-                .uploadedAt(invoice.getUploadedAt())
                 .vendorName(invoice.getVendorName())
                 .invoiceNumber(invoice.getInvoiceNumber())
                 .invoiceDate(invoice.getInvoiceDate())
@@ -70,8 +101,14 @@ public class InvoiceService {
                 .subtotalAmount(invoice.getSubtotalAmount())
                 .taxAmount(invoice.getTaxAmount())
                 .totalAmount(invoice.getTotalAmount())
+                .status(invoice.getStatus())
+                .extractionMethod(invoice.getExtractionMethod())
+                .uploadedAt(invoice.getUploadedAt())
                 .failureMessage(invoice.getFailureMessage())
                 .lineItems(lineItems)
+                .unresolvedFailures(unresolvedFailures)
+                .resolvedFailures(resolvedFailures)
+                .evidenceSummary(evidenceSummary)
                 .build();
     }
 
@@ -86,11 +123,49 @@ public class InvoiceService {
                 .build();
     }
 
-    public InvoiceListResponse listInvoices(InvoiceStatus status, int page, int pageSize) {
-        throw new UnsupportedOperationException("Not implemented");
+    public InvoiceListResponse listInvoices(InvoiceStatus status,
+                                             String vendor,
+                                             LocalDate dateFrom,
+                                             LocalDate dateTo,
+                                             BigDecimal amountMin,
+                                             BigDecimal amountMax,
+                                             int page,
+                                             int size) {
+        Specification<Invoice> spec = Specification
+                .where(InvoiceSpecification.hasStatus(status))
+                .and(InvoiceSpecification.vendorContains(vendor))
+                .and(InvoiceSpecification.dateFrom(dateFrom))
+                .and(InvoiceSpecification.dateTo(dateTo))
+                .and(InvoiceSpecification.amountMin(amountMin))
+                .and(InvoiceSpecification.amountMax(amountMax));
+
+        Page<Invoice> resultPage = invoiceRepository.findAll(spec, PageRequest.of(page, size, Sort.by("uploadedAt").descending()));
+
+        List<InvoiceListItem> items = resultPage.getContent().stream()
+                .map(this::toListItem)
+                .toList();
+
+        return InvoiceListResponse.builder()
+                .invoices(items)
+                .totalElements(resultPage.getTotalElements())
+                .totalPages(resultPage.getTotalPages())
+                .currentPage(resultPage.getNumber())
+                .build();
     }
 
-    public byte[] downloadOriginalFile(UUID invoiceId) {
-        throw new UnsupportedOperationException("Not implemented");
+    private InvoiceListItem toListItem(Invoice invoice) {
+        int unresolvedFailureCount = validationFailureRepository.countByInvoiceIdAndResolvedFalse(invoice.getId());
+
+        return InvoiceListItem.builder()
+                .id(invoice.getId())
+                .vendorName(invoice.getVendorName())
+                .invoiceNumber(invoice.getInvoiceNumber())
+                .invoiceDate(invoice.getInvoiceDate())
+                .totalAmount(invoice.getTotalAmount())
+                .currency(invoice.getCurrency())
+                .status(invoice.getStatus())
+                .uploadedAt(invoice.getUploadedAt())
+                .unresolvedFailureCount(unresolvedFailureCount)
+                .build();
     }
 }
